<resources>
    <string name="app_name">Toss</string>
    <string name="welcome">MISSING COIN THEN USE TOSS</string>
    <string name="quote">THE SPRINT IS SOMETIMES LIKE A TOSS OF A COIN. SOMETIMES IT\'S HEADS, AND SOMETIMES IT\'S TAILS</string>
    <string name="todo">images_conentdescription</string>
    <string name="head">Head</string>
    <string name="tail">Tail</string>
    <string name="image_text">TOSS</string>
    <string name="palyerA">Player A team</string>
    <string name="palyerB">Player B team</string>
</resources>